tests/ui/parser/using_operator_missing.sol
using {f as} for uint; //~ ERROR: expected
